# FSD

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  run_all.sh  stop_all.sh  yes.m4a
include/client/: AudioCapturer.h  SleepDetector.h
include/server/: TriggerEngine.h
include/shared/: Placeholder.h
proto/: classdefense.proto
src/client/: AudioCapturer.cpp  SleepDetector.cpp  main.cpp
src/server/: AudioProcessor.cpp  AudioProcessor.hpp  AudioStreamController.cpp  AudioStreamController.hpp  STTService.cpp  STTService.hpp  TriggerEngine.cpp  stt_server.cpp
src/shared/: Placeholder.cpp
